opam-version: "2.0"
version: "v0.15.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_fixed_point"
bug-reports: "https://github.com/janestreet/hardcaml_fixed_point/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_fixed_point.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_fixed_point/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "4.08.0"}
  "base"     {>= "v0.15" & < "v0.16"}
  "hardcaml" {>= "v0.15" & < "v0.16"}
  "ppx_jane" {>= "v0.15" & < "v0.16"}
  "dune"     {>= "2.0.0"}
]
synopsis: "Hardcaml fixed point arithmetic"
description: "
Signed and Unsigned fixed point operations, with a full complement of rounding and
overflow functionality.
"
